tests/rename/should_fail/T15611b.hs
module T15611b where
